added some extra hardcode for html list, and delete button

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </header>
 
     <main>
-        <form id="add-shopping-list-item">
+        <form class="shopping-list-form">
             <label>
                 <input item="item" required placeholder="item of choice">
             </label>
@@ -38,7 +38,13 @@
         </form>
 
         <h2>Shopping List</h2>
-        <div id="shopping-list-container"></div>
+
+        <ul class="list">
+            //rendered list will go here.
+        </ul>
+
+        <button class="delete">Delete List</button>
+
     </main>
 
     <footer>&copy;2022 Alchemy Software Developer</footer>
