--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;600&family=Titillium+Web:wght@200;400;600&display=swap">
     <link rel="stylesheet" href="styles/reset.css" />
     <link rel="stylesheet" href="styles/global.css" />
+    <link rel="stylesheet" href="styles/form.css"/>
     <title>Supabase Web App</title>
 </head>
 
@@ -26,20 +27,24 @@
     </header>
 
     <main>
+        <div class="h1-container">
+        <h1 class="neon">My Grocery Shopping List</h1>
+        </div>
+        
         <form class="shopping-list-form">
             <label>
-                <input item="item" required placeholder="item of choice">
+                <input name="item" id="item" required placeholder="item of choice">
             </label>
             <label>
                 <input type="number" id="quantity" 
-                name="quantity" min="1" max="10">
+                name="quantity" min="1" max="100">
             </label>
             <button>Add Item</button>
         </form>
 
         <h2>Shopping List</h2>
 
-        <ul class="list">
+        <ul class="shopping-list">
             //rendered list will go here.
         </ul>
 
